fix: view hint on mobile

--- a/src/components/List/List.module.scss
+++ b/src/components/List/List.module.scss
@@ -5,7 +5,7 @@
   width: 100%;
   overflow-y: scroll;
   max-height: calc(100vh - 350px);
-  //max-height: 100%;
+  border-radius: 25px;
 }
 
 .list {
